??/??/?? tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
         hanatok, rmeli, aditya-kamath, tirkarthi, LeonardoBarneschi, hejamu,
         biogen98, orioncohen, z3y50n, hp115, ojeda-e, thadanipaarth, HenryKobin,
         1ut, sulays, ahy3nz, fiszczyp

  * 2.0.0

Fixes
  * DL_POLY HISTORY file may contain unit cell dimensions even if there are
    no periodic boundary conditions (imcom=0) (Issue #3314, PR #3312).
  * New RDKitConverter cache system to fix issue #2958 (PR #2942)
  * Fixed OpenMM converter documentation not showing up in the Converters
    section (Issue #3262, PR #2882)
  * WaterBridgeAnalysis double counts the water (Issue #3119, PR #3120)
  * NCDFReader now defaults to a dt value of 1.0 ps when it cannot estimate
    it from the first two frames of the file (Issue #3166)
  * Get chi1_selection to match canonical gamma atoms (Issue #2044)
  * ITPParser now accepts relative paths (Issue #3037, PR #3108)
  * Fixed issue with unassigned 'GAP' variable in fasta2algin function when
    resids are provided in input (Issue #3124)
  * Improve diffusionmap coverage (Issue #3208)
  * Removed deprecated parameters `n_jobs` and `precompute_distances` of
    sklearn.cluster.KMeans (Issue #2986)
  * Helix_analysis coverage raised to 100% and `from __future__ import`
    removed (Issue #3209)
  * Fixed 'sphzone', 'sphlayer', 'cyzone', and 'cylayer' to return empty if the
   zone/layer is empty, consistent with 'around' (Issue #2915)
  * A Universe created from an ROMol with no atoms returns now a Universe
    with 0 atoms (Issue #3142)
  * PDBParser will check for the presence of the chainID attribute of an
    atom group and use these values instead of just using the end of segid.
    If no chainID attribute is present, then a default value will be