@@ -18,11 +18,13 @@ The rules for this file:
          calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
          hanatok, rmeli, aditya-kamath, tirkarthi, LeonardoBarneschi, hejamu,
          biogen98, orioncohen, z3y50n, hp115, ojeda-e, thadanipaarth, HenryKobin,
-         1ut, sulays, ahy3nz, fiszczyp
+         1ut, sulays, ahy3nz, fiszczyp, fiona-naughton
 
   * 2.0.0
 
 Fixes
+  * Fixed missing array flatten preventing PCA from running when mean positions  
+    provided and bugs causing tests to incorrectly pass (Issue #2728, PR #3296)
   * DL_POLY HISTORY file may contain unit cell dimensions even if there are
     no periodic boundary conditions (imcom=0) (Issue #3314, PR #3312).
   * New RDKitConverter cache system to fix issue #2958 (PR #2942)
